Fix and refactor configuration visibility
-Fix visibility logic.
-Simplify and clean code.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -205,7 +205,7 @@ h4 {
   left: 0;
   width: 100%;
   text-align: center;
-  color: red;
+  color: $lightSurfaceContentMedium;
   z-index: 1;
   font-size: 24px;
 }
